tests/failing/1-undefined_target/main.rgo
str: @str
printf: (fmt: str!, args: ..., ok:()) {
    (s: str) = @sprintf(fmt, args)
    @write(s, ok)
}
main: () {
    foo()
}
